# CPP

./: .gitattributes  README.md
CLion/010618_Part1/: CMakeLists.txt  main.cpp
CLion/Lecture01/: Date.cpp  Person.cpp  Person.h  main.cpp
CLion/cppexercises/18.1_template_ArrayList/: ArrayList.h  main.cpp
CLion/cppexercises/3.2/: QuadraticFormula.cpp  QuadraticFormula.h  main.cpp
CLion/cppexercises_3.2/: QuadraticFormula.cpp  QuadraticFormula.h  main.cpp
IDfk/: testprogram.cpp
PPM Color image shit/: convert.py
Prep/PPM Color image shit/: main.cpp
Projects/Numerical_Methods/: Lecture1solution.cpp  Lecture2solution.cpp
Projects/OpenCV/OpenCV_Ex1/: CMakeLists.txt  main.cpp
Projects/Traade_og_DB/: CMakeLists.txt  CMakeLists.txt.user.7750cc4  Random.cpp  Random.h  bil_db.db  bil_db.sqbpro  cargenerator.cpp  cargenerator.h  database.cpp  database.h  main.cpp  queries.sql  simonMain.cpp
Projects/build-Traade_og_DB-Desktop-Debug/: CMakeCache.txt  Makefile  Traade_og_DB  Traade_og_DB.cbp  cmake_install.cmake
Projects/build-Traade_og_DB-Desktop-MinSizeRel/: CMakeCache.txt  Makefile  Traade_og_DB  Traade_og_DB.cbp  cmake_install.cmake
Qt Projects/Lektion01/: Date.cpp  Date.h  Lektion01.pro  Person.cpp  Person.h  main.cpp
Qt Projects/build-Lektion01-Desktop_Qt_6_0_1_MSVC2019_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
Qt Projects/build-Lektion01-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
RayTracing/PPM Color image shit/: main.cpp
VS Projects/Lecture 01/: Lecture 01.sln  Person.cpp
(+179 files in other folders)
